@@ -7,6 +7,9 @@
      [ssh.1 sshd.8]
      document case sensitivity for ssh, sshd and key file
      options and arguments; ok markus@
+   - stevesk@cvs.openbsd.org 2001/08/17 18:59:47
+     [servconf.h]
+     typo in comment
 
 20010815
  - (bal) Fixed stray code in readconf.c that went in by mistake.
@@ -6330,4 +6333,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1486 2001/09/12 16:36:17 mouring Exp $
+$Id: ChangeLog,v 1.1487 2001/09/12 16:40:05 mouring Exp $
